--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
 <a href="eternals.html" >
     <h3>Eternals (2021)</h3>
 </a>
+    <a href="Shang-Chi.html" >
+    <h3>Shang-Chi (2021)</h3>
+</a>
 </div>
 </div>
 
